k8s-config/rml/auth_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: rml
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: alpacron/auth:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: global-secret
