k8s-config/rml/auth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: rml
spec:
  selector:
    app: auth-app
  ports:
    - name: port1
      protocol: TCP
      port: 80
      targetPort: 80
    - name: port2
      protocol: TCP
      port: 443
      targetPort: 443
