k8s-config/rml/rml-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rml-ingress
  namespace: rml
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
